<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_10"
    android:layout_marginEnd="@dimen/margin_10"
    android:layout_marginTop="@dimen/margin_5"
    android:layout_marginBottom="@dimen/margin_5"
    app:cardCornerRadius="@dimen/cv_radius_large"
    app:cardElevation="@dimen/cv_elevation"
    app:cardUseCompatPadding="false">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_rounded_border_green">

        <TextView
            android:id="@+id/txt_bookingType"
            style="@style/Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_10"
            android:gravity="center"
            android:text="@string/booking_type_no_format"
            android:textAllCaps="true"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/txt_subheading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_sep"
            style="@style/Separator_Horizontal_No_Margin"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_bookingType" />

        <TextView
            android:id="@+id/lbl_playground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:text="@string/playground_name_no_format"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/txt_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_sep" />

        <TextView
            android:id="@+id/txt_playground"
            android:layout_width="0dp"
            android:layout_margin="@dimen/margin_5"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/txt_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/lbl_playground"
            app:layout_constraintTop_toTopOf="@+id/lbl_playground"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_playground" />


        <TextView
            android:id="@+id/lbl_fineType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:text="@string/fine_type"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/txt_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_playground" />

        <TextView
            android:id="@+id/txt_fineType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/txt_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/lbl_fineType"
            app:layout_constraintTop_toTopOf="@+id/lbl_fineType"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_fineType" />


        <TextView
            android:id="@+id/lbl_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:text="@string/date_no_format"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/txt_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_fineType" />

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:layout_margin="@dimen/margin_5"
            android:textSize="@dimen/txt_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/lbl_date"
            app:layout_constraintTop_toTopOf="@+id/lbl_date"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_date" />


        <TextView
            android:id="@+id/lbl_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:text="@string/time_no_format"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/txt_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_date" />

        <TextView
            android:id="@+id/txt_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/txt_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/lbl_time"
            app:layout_constraintTop_toTopOf="@+id/lbl_time"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_time" />


        <TextView
            android:id="@+id/lbl_amount"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:layout_height="wrap_content"
            android:text="@string/amount_no_format"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/txt_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_time" />

        <TextView
            android:id="@+id/txt_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/txt_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/lbl_amount"
            app:layout_constraintTop_toTopOf="@+id/lbl_amount"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_amount" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/margin_5"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_amount">

            <TextView
                android:id="@+id/lbl_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5"
                android:text="@string/status_no_format"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/txt_default" />

            <TextView
                android:id="@+id/txt_status"
                style="@style/Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="paid"
                android:textAllCaps="true"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/txt_subheading" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>