<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_container"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_xlarge"
    android:clipChildren="true"
    android:clipToPadding="true"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp"
    app:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/img_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/gradient_black_transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_name" />


        <TextView
            android:id="@+id/txt_name"
            style="@style/Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="@dimen/padding_2"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_title"
            app:layout_constraintBottom_toTopOf="@+id/txt_address"
            app:layout_constraintEnd_toEndOf="@+id/txt_address"
            app:layout_constraintStart_toStartOf="@+id/txt_address" />

        <TextView
            android:id="@+id/txt_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5"
            android:layout_marginEnd="@dimen/margin_5"
            android:layout_marginStart="@dimen/margin_5"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="@dimen/padding_2"
            android:text="@string/address"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
